2006-11-01 [colin]	2.5.6cvs16

	* COPYING
		Add missed files to the Apache exception

2006-10-31 [colin]	2.5.6cvs15

	* src/folder.c
	* src/folder.h
		Add a copy_private_data() func to FolderClasses
		Doesn't break the feature freeze, because we 
		won't use it (right now) in the core.

2006-10-31 [colin]	2.5.6cvs14

	* COPYING
		Allow linking with the Apache licensed files in
		src/plugins/spamassassin. Hopefully fixes 
		bug 1048, 'Spamassassin plugin license problem'

2006-10-31 [wwp]	2.5.6cvs13

	* src/compose.c
		fix and optimize trimming of leading linefeeds in body loop.

2006-10-31 [colin]	2.5.6cvs12

	* src/etpan/imap-thread.c
	* src/imap.c
		Make really sure to have NULL sets in case
		of error

2006-10-30 [wwp]	2.5.6cvs11

	* src/prefs_common.c
	* src/prefs_common.h
	* src/compose.c
		fix broken storage of quote format template when it contains \-escape
		sequences. The application of such sequences is also fixed now (\t
		in quote format will be a real tab instead of a 't', for instance).

2006-10-27 [colin]	2.5.6cvs10

	* src/compose.c
		Probably fix bug 1045, 'sylpheed-claws 
		doesn't remove the mail from the IMAP 
		Queue folder after sending'. From
		2.5.6cvs3-stable

2006-10-27 [colin]	2.5.6cvs9

	* configure.ac
		Require libetpan-0.48. I'm so annoying,
		I know ;-)

2006-10-27 [colin]	2.5.6cvs8

	* src/folder.c
	* src/imap.c
		Probably fix bug 1044, 'sylpheed-claws 
		segfaults while moving mails' - Fix relation
		usage when moving to an IMAP mailbox from another
		mailbox

2006-10-26 [paul]	2.5.6cvs7

	* src/gtk/about.c
		add libSM to compiled-in features
		list

2006-10-24 [colin]	2.5.6cvs6

	* src/textview.c
	* src/gtk/gtkutils.c
		Fix crash when printing emails with an
		xface

2006-10-24 [mones]	2.5.6cvs5

	* manual/es/advanced.xml
		Synchronize hidden option respect_flowed_format
	* po/es.po
		Updated translation

2006-10-21 [paul]	2.5.6cvs4

	* src/gtk/authors.h
	* src/plugins/pgpcore/pgp_viewer.c
	* src/plugins/pgpcore/sgpgme.c