@@ -1,3 +1,8 @@
+2006-11-01 [colin]	2.5.6cvs17
+
+	* src/folderutils.c
+		debug_print() folderutils_mark_all_read()
+
 2006-11-01 [colin]	2.5.6cvs16
 
 	* COPYING
